force-app/main/default/objects/Stripe_Price__c/Stripe_Price__c.object-meta.xml
<CustomObject>
    <label>Stripe Price</label>
    <nameField>
        <displayFormat>PRICE-{0000}</displayFormat>
        <label>Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>