force-app/main/default/objects/Stripe_Price__c/fields/Billing_Interval__c.field-meta.xml
<CustomField>
    <fullName>Billing_Interval__c</fullName>
    <description>Billing interval for recurring prices</description>
    <label>Billing Interval</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
                <default>true</default>
                <label>Month</label>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>