force-app/main/default/objects/Stripe_Price__c/fields/Billing_Interval_Count__c.field-meta.xml
<CustomField>
    <fullName>Billing_Interval_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of intervals between billings</description>
    <label>Billing Interval Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>