force-app/main/default/objects/Stripe_Price__c/fields/Billing_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Billing_Scheme__c</fullName>
    <description>Describes how to compute the price per period. Per unit indicates fixed amount charged per unit. Tiered indicates unit pricing computed using a tiering strategy.</description>
    <label>Billing Scheme</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>per_unit</fullName>
                <default>true</default>
                <label>Per Unit</label>
            </value>
            <value>
                <fullName>tiered</fullName>
                <label>Tiered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>