force-app/main/default/objects/Stripe_Price__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Currency code for this price</description>
    <label>Currency</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>