force-app/main/default/objects/Stripe_Price__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <description>Features included with this price</description>
    <label>Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>