force-app/main/default/objects/Stripe_Price__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this price is active and available for use</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>