force-app/main/default/objects/Stripe_Price__c/fields/Lookup_Key__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Key__c</fullName>
    <description>A lookup key used to retrieve prices dynamically from a static string. This may be up to 200 characters.</description>
    <label>Lookup Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>