force-app/main/default/objects/Stripe_Price__c/fields/Stripe_Price_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Price_ID__c</fullName>
    <description>External ID from Stripe for this price</description>
    <externalId>true</externalId>
    <label>Stripe Price ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>