force-app/main/default/objects/Stripe_Price__c/fields/Stripe_Product__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Stripe Product this price belongs to</description>
    <label>Stripe Product</label>
    <referenceTo>Stripe_Product__c</referenceTo>
    <relationshipLabel>Stripe Prices</relationshipLabel>
    <relationshipName>Stripe_Prices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>