force-app/main/default/objects/Stripe_Price__c/fields/Tax_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Tax_Behavior__c</fullName>
    <description>Specifies whether the price is considered inclusive of taxes or exclusive of taxes. Once specified as either inclusive or exclusive, it cannot be changed.</description>
    <label>Tax Behavior</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>exclusive</fullName>
                <default>true</default>
                <label>Exclusive</label>
            </value>
            <value>
                <fullName>inclusive</fullName>
                <label>Inclusive</label>
            </value>
            <value>
                <fullName>unspecified</fullName>
                <label>Unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>