force-app/main/default/objects/Stripe_Price__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of price - one-time or recurring</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
                <default>true</default>
                <label>Recurring</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>