force-app/main/default/objects/Stripe_Price__c/fields/Unit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Amount__c</fullName>
    <description>Unit amount in cents (as stored by Stripe)</description>
    <label>Unit Amount (cents)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>